--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: evcc-garmin User Manual
-description: This user manual covers evcc-garmin, a Garmin wearable app that displays data from evcc, an open-source software solution for solar-powered EV charging.
 remote_theme: pages-themes/midnight@v0.2.0
+show_downlaods: false
 plugins:
 - jekyll-remote-theme
