Moved to stable app id, worked o user manual

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: evcc-garmin User Manual
+title: evccg User Manual
 remote_theme: pages-themes/midnight@v0.2.0
 show_downlaods: false
 plugins:
