--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
       {
         "label": "Generate Source for Tiny Glance",
         "type": "shell",
-        "command": ".\\source-annot-tinyglance\\create-source-files.bat",
+        "command": "cd .\\source-annot-tinyglance;.\\create-source-files.bat",
         "group": {
           "kind": "build",
           "isDefault": false
