Split EvccDrawingBlocks.mc into one source file per class. Updated generation script to handle subdirectories.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
       {
         "label": "evccg: Generate Source for Tiny Glance",
         "type": "shell",
-        "command": "cd .\\source-annot-tinyglance;.\\create-source-files.bat",
+        "command": "cd .\\source-annot-tinyglance-script;.\\create-annot-tinyglance-source-files.bat",
         "group": {
           "kind": "build",
           "isDefault": false
